--- a/index.html
+++ b/index.html
@@ -3,11 +3,86 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Table</title>
+    <title>Alan Leventhal</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>REPLACE THIS WITH A TABLE TITLE</h1>
-    <div class="table-container">REPLACE THIS WITH YOUR GENERATED TABLE</div>
-  </body>
+    <h1>My List of 9 Influencial Songs</h1>
+    <div class="tg-wrap">
+      
+      <table class="tg">
+        <thead>
+      <tr>
+        <th class="tg-0lax">Band/Artist</th>
+        <th class="tg-0lax">Song name</th>
+        <th class="tg-0lax">Country of Origin/<br>Date Released</th>
+        <th class="tg-0lax">Style of Music</th>
+        <th class="tg-0lax">Rating</th>
+      </tr></thead>
+    <tbody>
+      <tr>
+        <td class="tg-0lax">Joy Division</td>
+        <td class="tg-hmp3">Love Will Tear Us Apart</td>
+        <td class="tg-0lax">UK: 06/27/1980</td>
+        <td class="tg-hmp3">Post Punk</td>
+        <td class="tg-0lax">10</td>
+      </tr>
+      <tr>
+        <td class="tg-0lax">The Rolling Stones</td>
+        <td class="tg-hmp3">Sympathy for the Devil</td>
+        <td class="tg-0lax">UK: 12/06/1968</td>
+        <td class="tg-hmp3">Samba Rock</td>
+        <td class="tg-0lax">10</td>
+      </tr>
+      <tr>
+        <td class="tg-0lax">Sex Pistols</td>
+        <td class="tg-hmp3">Anarchy in the U.K.</td>
+        <td class="tg-0lax">UK: 11/26/1976</td>
+        <td class="tg-hmp3">Punk Rock</td>
+        <td class="tg-0lax">10</td>
+      </tr>
+      <tr>
+        <td class="tg-0lax">My Bloody Valentine</td>
+        <td class="tg-hmp3">Only Shallow</td>
+        <td class="tg-0lax">UK: 11/04/1991</td>
+        <td class="tg-hmp3">Shoegaze</td>
+        <td class="tg-0lax">10</td>
+      </tr>
+      <tr>
+        <td class="tg-0lax">The Who</td>
+        <td class="tg-hmp3">Baba O'Riley</td>
+        <td class="tg-0lax">UK: 08/02/1971</td>
+        <td class="tg-hmp3">Hard Rock</td>
+        <td class="tg-0lax">10</td>
+      </tr>
+      <tr>
+        <td class="tg-0lax">Ramones</td>
+        <td class="tg-hmp3">I Wanna Be Sedated</td>
+        <td class="tg-0lax">US: 09/21/1978</td>
+        <td class="tg-hmp3">Punk Rock</td>
+        <td class="tg-0lax">10</td>
+      </tr>
+      <tr>
+        <td class="tg-0lax">David Bowie</td>
+        <td class="tg-hmp3">Life on Mars</td>
+        <td class="tg-0lax">UK: 06/22/1973</td>
+        <td class="tg-hmp3">Glam Rock</td>
+        <td class="tg-0lax">10</td>
+      </tr>
+      <tr>
+        <td class="tg-0lax">Pink Floyd</td>
+        <td class="tg-hmp3">Brain Dammage/Eclipse</td>
+        <td class="tg-0lax">UK: 03/01/1973</td>
+        <td class="tg-hmp3">Psychedelic Rock</td>
+        <td class="tg-0lax">10</td>
+      </tr>
+      <tr>
+        <td class="tg-0lax">Nirvana</td>
+        <td class="tg-hmp3">Smells Like Teen Spirit</td>
+        <td class="tg-0lax">US: 09/10/1991</td>
+        <td class="tg-hmp3">Grunge</td>
+        <td class="tg-0lax">10</td>
+      </tr>
+    </tbody></table>
+  <caption>Source: wikipedia.org, Personal Opinion. Background image from pngtree.com</caption></div>  </body>
 </html>
